Got rid of other tab's GUI elements being visible by default